--- a/views/user/interviews/all.twig
+++ b/views/user/interviews/all.twig
@@ -1,35 +1,77 @@
 {% extends 'user/master.twig' %}
 {% block content %}
 
-    <!--  BEGIN CONTENT AREA  -->
-    <div id="content" class="main-content">
-        <div class="layout-px-spacing">
+    <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+        <!--begin::Toolbar-->
+        <div class="toolbar" id="kt_toolbar">
+            <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+                <!--begin::Page title-->
+                <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+                    <!--begin::Title-->
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Interviews</h1>
+                    <!--end::Title-->
+                    <!--begin::Separator-->
+                    <span class="h-20px border-gray-300 border-start mx-4"></span>
+                    <!--end::Separator-->
+                    <!--begin::Breadcrumb-->
+                    <ul class="breadcrumb breadcrumb-separatorless fw-bold fs-7 my-1">
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item text-muted">Dashboard</li>
+                        <!--end::Item-->
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item">
+                            <span class="bullet bg-gray-300 w-5px h-2px"></span>
+                        </li>
+                        <!--end::Item-->
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item text-dark">Interviews</li>
+                        <!--end::Item-->
+                    </ul>
+                    <!--end::Breadcrumb-->
+                </div>
+                <!--end::Page title-->
+            </div>
+        </div>
+        <div class="post d-flex flex-column-fluid" id="kt_post">
+            <!--begin::Container-->
+            <div id="kt_content_container" class="container-fluid">
+                <div class="layout-px-spacing">
 
-            <div class="middle-content container-xxl p-0">
+                    <div class="middle-content container-fluid p-0">
                 <div id="call-ringing"></div>
 
-                <!-- BREADCRUMB -->
-                <div class="page-meta">
-                    <nav class="breadcrumb-style-one" aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/user/dashboard">Dashboard</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Interviews</li>
-                        </ol>
-                    </nav>
-                </div>
+
                 <!-- /BREADCRUMB -->
                 <div class="row layout-spacing mt-2">
                     <div class="col-lg-12 justify-content-end text-end ">
-                        <a type="button" href="/user/interviews/questions" class="btn btn-primary  me-4">
-                            <span class="btn-text-inner">Add Section</span>
-                        </a>
+
                     </div>
                 </div>
                 <div class="row layout-spacing">
                     <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
-                        <div class="widget-content widget-content-area">
+                        <div class="widget-content widget-content-area card">
+                            <div class="card-header border-0 pt-6 w-100">
+                                <div class="col-md-6 mt-3 text-md-start text-center">
+                                    <div class="d-flex align-items-center position-relative my-1">
+                                        <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
+                                        <span class="svg-icon svg-icon-1 position-absolute ms-6">
+													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+														<rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2" rx="1" transform="rotate(45 17.0365 15.1223)" fill="currentColor" />
+														<path d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z" fill="currentColor" />
+													</svg>
+												</span>
+                                        <!--end::Svg Icon-->
+                                        <input type="text" data-kt-customer-table-filter="search" id="search" class="form-control form-control-solid w-250px ps-15" placeholder="Search " />
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mt-3 text-md-end text-center">
+                                    <a type="button" href="/user/interviews/questions" class="btn btn-primary  me-4">
+                                        <span class="btn-text-inner">Add Section</span>
+                                    </a>
+                                </div>
+                            </div>
                             <div class="table-responsive">
-                                <table id="table"  class="table dt-table-hover" style="width:100%">
+                                <table id="table"  class="table table-row-dashed table-row-gray-300 align-middle gs-0 gy-4" style="width:100%">
                                     <thead>
                                     <tr>
                                         <th> # </th>
@@ -52,16 +94,8 @@
 
         </div>
 
-
-        <!--  BEGIN FOOTER  -->
-        <div class="footer-wrapper">
-            <div class="footer-wrapper">
-                <div class="footer-section f-section-1">
-                    <p class="">Copyright © <span class="dynamic-year">2024</span> <a target="_blank" href="https://zotecsoft.com/">ZotecSoft</a>, All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-        <!--  END FOOTER  -->
+    </div>
+    </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <!--  END CONTENT AREA  -->
@@ -84,6 +118,9 @@
                     {mData: 'statusView'},
                     {mData: 'action'},
                 ]
+            });
+            $('#search').on('keyup', function() {
+                $('#table').DataTable().search(this.value).draw();
             });
         });
 
