--- a/views/user/clients/members.twig
+++ b/views/user/clients/members.twig
@@ -44,7 +44,7 @@
                     <div class="col-xl-12 col-lg-12 col-sm-12  layout-spacing">
                         <div class="widget-content widget-content-area card">
                             <div class="card-header border-0 pt-6 w-100">
-                                <div class="col-md-6 text-start">
+                                <div class="col-md-6 mt-3 text-md-start text-center">
                                     <div class="d-flex align-items-center position-relative my-1">
                                         <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
                                         <span class="svg-icon svg-icon-1 position-absolute ms-6">
@@ -57,10 +57,13 @@
                                         <input type="text" data-kt-customer-table-filter="search" id="search" class="form-control form-control-solid w-250px ps-15" placeholder="Search " />
                                     </div>
                                 </div>
-                                <div class="col-md-6 text-end">
+                                <div class="col-md-6 mt-3 text-md-end text-center">
                                     <button type="button" class="btn btn-primary  me-4" data-bs-toggle="modal" data-bs-target="#inputFormModalAssociates">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
                                         <span class="btn-text-inner">Invite</span>
+                                    </button>
+                                    <button type="button" class="btn btn-primary  me-4" data-bs-toggle="modal" data-bs-target="#addAssociatesModal">
+                                        <span class="btn-text-inner">Add</span>
                                     </button>
                                 </div>
                             </div>
@@ -164,6 +167,9 @@
                     {mData: 'statusView'},
                     {mData: 'action'},
                 ]
+            });
+            $('#search').on('keyup', function() {
+                $('#table').DataTable().search(this.value).draw();
             });
         });
 
