--- a/views/user/profile/security.twig
+++ b/views/user/profile/security.twig
@@ -253,6 +253,35 @@
                                 </div>
                                 <!--end::Wrapper-->
                             </div>
+                            <div class="notice d-flex bg-light-primary rounded border-primary border border-dashed p-6 mt-5">
+                                <!--begin::Icon-->
+                                <!--begin::Svg Icon | path: icons/duotune/general/gen048.svg-->
+                                <span class="svg-icon svg-icon-2tx svg-icon-primary me-4">
+													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+														<path opacity="0.3" d="M20.5543 4.37824L12.1798 2.02473C12.0626 1.99176 11.9376 1.99176 11.8203 2.02473L3.44572 4.37824C3.18118 4.45258 3 4.6807 3 4.93945V13.569C3 14.6914 3.48509 15.8404 4.4417 16.984C5.17231 17.8575 6.18314 18.7345 7.446 19.5909C9.56752 21.0295 11.6566 21.912 11.7445 21.9488C11.8258 21.9829 11.9129 22 12.0001 22C12.0872 22 12.1744 21.983 12.2557 21.9488C12.3435 21.912 14.4326 21.0295 16.5541 19.5909C17.8169 18.7345 18.8277 17.8575 19.5584 16.984C20.515 15.8404 21 14.6914 21 13.569V4.93945C21 4.6807 20.8189 4.45258 20.5543 4.37824Z" fill="currentColor" />
+														<path d="M10.5606 11.3042L9.57283 10.3018C9.28174 10.0065 8.80522 10.0065 8.51412 10.3018C8.22897 10.5912 8.22897 11.0559 8.51412 11.3452L10.4182 13.2773C10.8099 13.6747 11.451 13.6747 11.8427 13.2773L15.4859 9.58051C15.771 9.29117 15.771 8.82648 15.4859 8.53714C15.1948 8.24176 14.7183 8.24176 14.4272 8.53714L11.7002 11.3042C11.3869 11.6221 10.874 11.6221 10.5606 11.3042Z" fill="currentColor" />
+													</svg>
+												</span>
+                                <!--end::Svg Icon-->
+                                <!--end::Icon-->
+                                <!--begin::Wrapper-->
+                                <div class="d-flex flex-stack flex-grow-1 flex-wrap flex-md-nowrap" id="row1">
+                                    <!--begin::Content-->
+                                    <div class="mb-3 mb-md-0 fw-bold">
+                                        <h4 class="text-gray-900 fw-bolder">Customize this platform with your own branding.</h4>
+                                        <div class="fs-6 text-gray-700 pe-7">Enable this feature to replace our branding with your own. Perfect for presenting a seamless brand experience to your clients. </div>
+                                    </div>
+                                    <!--end::Content-->
+                                    <!--begin::Action-->
+                                    {% if userinfo[0].white_labeling == "no" %}
+                                        <a role="button" class="btn btn-success px-6 align-self-center text-nowrap" onclick="white_labeling('{{ userinfo[0].id }}', 1)">Enable</a>
+                                    {% else %}
+                                        <a role="button" class="btn btn-primary px-6 align-self-center text-nowrap" onclick="white_labeling('{{ userinfo[0].id }}', 0)">Disable</a>
+                                    {% endif %}
+                                    <!--end::Action-->
+                                </div>
+                                <!--end::Wrapper-->
+                            </div>
                             <!--end::Notice-->
                         </div>
                         <!--end::Card body-->
@@ -396,6 +425,38 @@
                     if (data == 1) {
                         toastr.success('2FA Updated.');
                         $('#row').load(window.location.href + ' #row');
+                        fetch_profile()
+                    } else {
+                        toastr.error('Something went wrong.');
+
+                    }
+                }
+
+            });
+        }
+        function white_labeling(userID, status) {
+            if(status == 0){
+                var currStatus= "no";
+            }else{
+                var currStatus= "yes";
+            }
+            var el = this;
+            $(this).html('<i class="fa fa-circle-o-notch fa-spin"></i> loading...');
+            var csrf_token = $("input[name=csrf]").val();
+            $.ajax({
+                url: '/user/api',
+                type: 'GET', data: {
+                    id: userID,
+                    status: currStatus,
+                    page_name: "userStatusUpdate",
+                    table_name:"users",
+                    status_table:"white_labeling",
+                    csrf: csrf_token
+                }, success: function (data) {
+                    fetch_profile()
+                    if (data == 1) {
+                        toastr.success('White Labeling Updated.');
+                        $('#row1').load(window.location.href + ' #row1');
                         fetch_profile()
                     } else {
                         toastr.error('Something went wrong.');
