--- a/views/user/templates/create.twig
+++ b/views/user/templates/create.twig
@@ -1,8 +1,41 @@
 {% extends 'user/master.twig' %}
 {% block content %}
-    <div id="content" class="main-content">
+<div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+    <!--begin::Toolbar-->
+    <div class="toolbar" id="kt_toolbar">
+        <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+            <!--begin::Page title-->
+            <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+                <!--begin::Title-->
+                <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Interviews</h1>
+                <!--end::Title-->
+                <!--begin::Separator-->
+                <span class="h-20px border-gray-300 border-start mx-4"></span>
+                <!--end::Separator-->
+                <!--begin::Breadcrumb-->
+                <ul class="breadcrumb breadcrumb-separatorless fw-bold fs-7 my-1">
+                    <!--begin::Item-->
+                    <li class="breadcrumb-item text-muted">Dashboard</li>
+                    <!--end::Item-->
+                    <!--begin::Item-->
+                    <li class="breadcrumb-item">
+                        <span class="bullet bg-gray-300 w-5px h-2px"></span>
+                    </li>
+                    <!--end::Item-->
+                    <!--begin::Item-->
+                    <li class="breadcrumb-item text-dark">Create / Update Template</li>
+                    <!--end::Item-->
+                </ul>
+                <!--end::Breadcrumb-->
+            </div>
+            <!--end::Page title-->
+        </div>
+    </div>
+    <div class="post d-flex flex-column-fluid" id="kt_post">
+        <!--begin::Container-->
+        <div id="kt_content_container" class="container-fluid">
         <div class="layout-px-spacing">
-            <div class="middle-content container-xxl p-0">
+            <div class="middle-content container-fluid p-0">
                 <div class="account-settings-container layout-top-spacing">
                     <div class="content-body">
                         <div class="container-fluid">
@@ -10,9 +43,8 @@
                             <div class="row">
                                 <div class="col-xl-12 col-lg-12">
                                     <div class="card card-bx m-b30">
-                                        <div class="card-header">
-                                            <h6 class="title">Create / Update Template</h6>
-                                        </div>
+                                            <h6 class="title" style="padding-top: 25px; padding-left: 25px;">Create / Update Template</h6>
+
                                         <form method="post" class="profile-form" id="templateForm" action="/user/template/create">
                                             <input type="hidden" name="csrf" value="{{ csrf }}">
                                             <input type="hidden" name="template_id" value="{{ template[0].id }}">
@@ -20,17 +52,17 @@
                                                 <div class="row">
                                                     <div class="col-lg-12 mb-3">
                                                         <label class="form-label">Template Name</label>
-                                                        <input type="text" class="form-control form-control-md" name="template_name" placeholder="Template Name" value="{{ template[0].name }}" required>
+                                                        <input type="text" class="form-control form-control-solid form-control-md" name="template_name" placeholder="Template Name" value="{{ template[0].name }}" required>
                                                     </div>
                                                     <div class="col-lg-12 mb-3">
                                                         <label class="form-label">Description</label>
-                                                        <textarea class="form-control form-control-md" name="description" placeholder="Description">{{ template[0].description }}</textarea>
+                                                        <textarea class="form-control form-control-solid form-control-md" name="description" placeholder="Description">{{ template[0].description }}</textarea>
                                                     </div>
                                                     <div class="col-lg-12 mb-3">
                                                         <label class="form-label">Select Sections</label>
                                                         <div id="sections_container">
                                                             {% for section in sections %}
-                                                                <div class="form-check">
+                                                                <div class="form-check mb-3">
                                                                     <input class="form-check-input" type="checkbox" name="sections[]" value="{{ section.id }}" id="section-{{ section.id }}" {% if section.id in template_sections %}checked{% endif %}>
                                                                     <label class="form-check-label" for="section-{{ section.id }}">
                                                                         {{ section.title }}
@@ -53,13 +85,9 @@
                 </div>
             </div>
         </div>
-        <!--  BEGIN FOOTER  -->
-        <div class="footer-wrapper">
-            <div class="footer-section f-section-1">
-                <p class="">Copyright © <span class="dynamic-year">2024</span> <a target="_blank" href="https://zotecsoft.com/">ZotecSoft</a>, All rights reserved.</p>
-            </div>
-        </div>
-        <!--  END FOOTER  -->
+
+    </div>
+    </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
