--- a/views/user/templates/view.twig
+++ b/views/user/templates/view.twig
@@ -16,16 +16,49 @@
         }
     </style>
 
-    <div id="content" class="main-content">
+<div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+    <!--begin::Toolbar-->
+    <div class="toolbar" id="kt_toolbar">
+        <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+            <!--begin::Page title-->
+            <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+                <!--begin::Title-->
+                <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Interviews</h1>
+                <!--end::Title-->
+                <!--begin::Separator-->
+                <span class="h-20px border-gray-300 border-start mx-4"></span>
+                <!--end::Separator-->
+                <!--begin::Breadcrumb-->
+                <ul class="breadcrumb breadcrumb-separatorless fw-bold fs-7 my-1">
+                    <!--begin::Item-->
+                    <li class="breadcrumb-item text-muted">Dashboard</li>
+                    <!--end::Item-->
+                    <!--begin::Item-->
+                    <li class="breadcrumb-item">
+                        <span class="bullet bg-gray-300 w-5px h-2px"></span>
+                    </li>
+                    <!--end::Item-->
+                    <!--begin::Item-->
+                    <li class="breadcrumb-item text-dark">Interviews</li>
+                    <!--end::Item-->
+                </ul>
+                <!--end::Breadcrumb-->
+            </div>
+            <!--end::Page title-->
+        </div>
+    </div>
+    <div class="post d-flex flex-column-fluid" id="kt_post">
+        <!--begin::Container-->
+        <div id="kt_content_container" class="container-fluid">
         <div class="layout-px-spacing">
-            <div class="middle-content container-xxl p-0">
+            <div class="middle-content container-fluid p-0">
                 <div class="row layout-top-spacing" id="cancel-row">
                     <div class="col-lg-12 layout-spacing">
-                        <div class="statbox widget box box-shadow">
+                        <div class="statbox widget box box-shadow card">
                             <div class="widget-header">
                                 <div class="row">
-                                    <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                        <h4>{{ template[0].name |capitalize}}</h4>
+                                    <div class="col-xl-12 col-md-12 col-sm-12 col-12" >
+                                        <h4 style="    padding: 27px 20px 0px 34px;">{{ template[0].name |capitalize}}</h4>
                                     </div>
                                 </div>
                             </div>
@@ -57,16 +90,21 @@
                                                             <h4 class="mt-3">{{ question.question|default('No Question') }}</h4>
                                                         {% else %}
                                                             <div class="form-group">
+
+                                                            {% if question.type == 'signature' %}
+                                                                <label for="question-{{ question.id }}" class="mt-3" style="font-weight: bold; font-size: 18px; margin-bottom: 15px;">{{ question.question|default('No Question') }}</label>
+                                                            {% else %}
                                                                 <label for="question-{{ question.id }}" class="mt-3">{{ question.question|default('No Question') }}</label>
+                                                                {% endif %}
                                                                 {% if question.type == 'text' %}
-                                                                    <input type="text" class="form-control {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]" placeholder="{{ question.question }}">
+                                                                    <input type="text" class="form-control form-control-solid {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]" placeholder="{{ question.question }}">
                                                                 {% elseif question.type == 'email' %}
-                                                                    <input type="email" class="form-control {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]" placeholder="{{ question.question }}">
+                                                                    <input type="email" class="form-control form-control-solid {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]" placeholder="{{ question.question }}">
                                                                 {% elseif question.type == 'textarea' %}
-                                                                    <textarea class="form-control {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]" placeholder="{{ question.question }}"></textarea>
+                                                                    <textarea class="form-control form-control-solid {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]" placeholder="{{ question.question }}"></textarea>
                                                                 {% elseif question.type == 'radio' %}
                                                                     {% for option in question.options %}
-                                                                        <div class="form-check">
+                                                                        <div class="form-check  mb-3">
                                                                             <input class="form-check-input {% if question.required %}required-input{% endif %}" type="radio" name="questions[{{ question.id }}][value]" id="question-{{ option.option_text }}" value="{{ option.option_text }}">
                                                                             <label class="form-check-label" for="question-{{ option.option_text }}">
                                                                                 {{ option.option_text|default('No Text') }}
@@ -75,7 +113,7 @@
                                                                     {% endfor %}
                                                                 {% elseif question.type == 'checkbox' %}
                                                                     {% for option in question.options %}
-                                                                        <div class="form-check">
+                                                                        <div class="form-check mb-3">
                                                                             <input class="form-check-input {% if question.required %}required-input{% endif %}" type="checkbox" name="questions[{{ question.id }}][value][]" id="question-{{ option.option_text }}" value="{{ option.option_text }}">
                                                                             <label class="form-check-label" for="question-{{ option.option_text }}">
                                                                                 {{ option.option_text|default('No Text') }}
@@ -83,23 +121,33 @@
                                                                         </div>
                                                                     {% endfor %}
                                                                 {% elseif question.type == 'select' %}
-                                                                    <select class="form-select {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
+                                                                    <select class="form-select form-select-solid {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
                                                                         {% for option in question.options %}
                                                                             <option value="{{ option.option_text }}">{{ option.option_text|default('No Text') }}</option>
                                                                         {% endfor %}
                                                                     </select>
                                                                 {% elseif question.type == 'date' %}
-                                                                    <input type="date" class="form-control {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
+                                                                    <input type="date" class="form-control form-control-solid {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
                                                                 {% elseif question.type == 'time' %}
-                                                                    <input type="time" class="form-control {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
+                                                                    <input type="time" class="form-control form-control-solid {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
                                                                 {% elseif question.type == 'password' %}
-                                                                    <input type="password" class="form-control {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
+                                                                    <input type="password" class="form-control form-control-solid {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
                                                                 {% elseif question.type == 'number' %}
-                                                                    <input type="number" class="form-control {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
+                                                                    <input type="number" class="form-control form-control-solid {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
                                                                 {% elseif question.type == 'datetime-local' %}
-                                                                    <input type="datetime-local" class="form-control {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
+                                                                    <input type="datetime-local" class="form-control form-control-solid {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
                                                                 {% elseif question.type == 'file' %}
-                                                                    <input type="file" class="form-control {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
+                                                                    <input type="file" class="form-control form-control-solid {% if question.required %}required-input{% endif %}" id="question-{{ question.id }}" name="questions[{{ question.id }}][value]">
+                                                                {% elseif question.type == 'signature' %}
+                                                                    <div class="row">
+                                                                        <div class="col-md-12">
+                                                                            <canvas id="signature-{{ question.id }}" width="300px" height="200" style="background-color: aliceblue"></canvas>
+                                                                            <input type="hidden" class="{% if question.required %}required-input{% endif %}" name="questions[{{ question.id }}][value]" id="input-signature-{{ question.id }}">
+                                                                        </div>
+                                                                        <div class="col-md-12">
+                                                                            <button class="btn btn-success ml-3 clear-signature" type="button" data-id="{{ question.id }}">Clear Signature</button>
+                                                                        </div>
+                                                                    </div>
                                                                 {% endif %}
                                                                 <!-- Include hidden inputs unless question type is 'none' -->
                                                                 <input type="hidden" name="questions[{{ question.id }}][label]" value="{{ question.question }}">
@@ -109,10 +157,10 @@
                                                     {% endfor %}
                                                     <div class="button-action mt-5">
                                                         {% if not loop.first %}
-                                                            <button type="button" class="btn btn-secondary btn-prev me-3">Prev</button>
+                                                            <button type="button" class="btn btn-primary btn-prev me-3">Prev</button>
                                                         {% endif %}
                                                         {% if not loop.last %}
-                                                            <button type="button" class="btn btn-secondary btn-nxt">Next</button>
+                                                            <button type="button" class="btn btn-primary btn-nxt">Next</button>
                                                         {% else %}
                                                             <button type="submit" class="btn btn-success me-3 submitBtn">Submit</button>
                                                         {% endif %}
@@ -128,18 +176,37 @@
                 </div>
             </div>
         </div>
-        <div class="footer-wrapper">
-            <div class="footer-wrapper">
-                <div class="footer-section f-section-1">
-                    <p class="">Copyright © <span class="dynamic-year">2024</span> <a target="_blank" href="https://zotecsoft.com/">ZotecSoft</a>, All rights reserved.</p>
-                </div>
-            </div>
-        </div>
+    </div>
+    </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
+    <script src="https://unpkg.com/signature_pad"></script>
     <script src="{{ env.APP_URL }}assets/dashboard/src/plugins/src/stepper/bsStepper.min.js"></script>
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var signaturePads = {};
+
+            document.querySelectorAll('canvas[id^="signature-"]').forEach(function (canvas) {
+                var questionId = canvas.id.split('-')[1];
+                signaturePads[questionId] = new SignaturePad(canvas);
+
+                function submitSignatureData() {
+                    var signatureData = signaturePads[questionId].toDataURL();
+                    document.getElementById('input-signature-' + questionId).value = signatureData;
+                }
+
+                // Continuously save signature data to the hidden input field every second
+                setInterval(submitSignatureData, 1000);
+            });
+
+            document.querySelectorAll('.clear-signature').forEach(function (button) {
+                button.addEventListener('click', function () {
+                    var questionId = this.dataset.id;
+                    signaturePads[questionId].clear();
+                });
+            });
+        });
+
         document.addEventListener('DOMContentLoaded', function () {
             var stepperWizardDefault = document.querySelector('.stepper-form-one');
             var stepperDefault = new Stepper(stepperWizardDefault, {
@@ -228,7 +295,7 @@
             var style = document.createElement('style');
             style.innerHTML = `
                 .is-invalid {
-                    border-color: #dc3545;
+                    border-color: #dc3545 !important;
                 }
             `;
             document.head.appendChild(style);
@@ -278,7 +345,7 @@
                                 toastr.success('Data saved successfully.');
                                 document.getElementById("dynamicForm").reset();
                                 setTimeout(function(){
-                                    window.location.href = 'user/template/all'; // Redirect to display page
+                                    window.location.href = '/client/template/request'; // Redirect to display page
                                 }, 2000); //Time before execution
 
                             } else {
@@ -295,5 +362,8 @@
             });
 
         });
+
+    </script>
+    <script>
     </script>
 {% endblock %}
