--- a/views/user/plans/index.twig
+++ b/views/user/plans/index.twig
@@ -5,188 +5,131 @@
         display: none;
     }
 </style>
-    <!--  BEGIN CONTENT AREA  -->
-    <div id="content" class="main-content">
-        <div class="layout-px-spacing">
-
-            <div class="middle-content container-xxl p-0">
-                <div id="call-ringing"></div>
-
-                <!-- BREADCRUMB -->
-                <div class="page-meta">
-                    <nav class="breadcrumb-style-one" aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/user/dashboard">Dashboard</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Plans</li>
-                        </ol>
-                    </nav>
+    <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
+        <!--begin::Toolbar-->
+        <div class="toolbar" id="kt_toolbar">
+            <!--begin::Container-->
+            <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
+                <!--begin::Page title-->
+                <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+                    <!--begin::Title-->
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Plans</h1>
+                    <!--end::Title-->
+                    <!--begin::Separator-->
+                    <span class="h-20px border-gray-300 border-start mx-4"></span>
+                    <!--end::Separator-->
+                    <!--begin::Breadcrumb-->
+                    <ul class="breadcrumb breadcrumb-separatorless fw-bold fs-7 my-1">
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item text-muted">
+                            <a href="/" class="text-muted text-hover-primary">Home</a>
+                        </li>
+                        <!--end::Item-->
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item">
+                            <span class="bullet bg-gray-300 w-5px h-2px"></span>
+                        </li>
+                        <!--end::Item-->
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item text-muted">Plans</li>
+                        <!--end::Item-->
+                    </ul>
+                    <!--end::Breadcrumb-->
                 </div>
-                <!-- /BREADCRUMB -->
-
-                <div class="row" id="cancel-row">
-
-                    <div class="col-lg-12 layout-spacing layout-top-spacing">
-                        <div class="statbox widget box box-shadow">
-                            <div class="widget-header">
-                                <div class="row">
-                                    <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                        <h4>Select your desire plan</h4>
-                                    </div>
-                                </div>
+            </div>
+            <!--end::Container-->
+        </div>
+        <!--end::Toolbar-->
+        <!--begin::Post-->
+        <div class="post d-flex flex-column-fluid" id="kt_post">
+            <!--begin::Container-->
+            <div id="kt_content_container" class="container-fluid">
+                <!--begin::Pricing card-->
+                <div class="card" id="kt_pricing">
+                    <!--begin::Card body-->
+                    <div class="card-body p-lg-17">
+                        <!--begin::Plans-->
+                        <div class="d-flex flex-column">
+                            <!--begin::Heading-->
+                            <div class="mb-13 text-center">
+                                <h1 class="fs-2hx fw-bolder mb-5">Choose Your Plan</h1>
+                                <div class="text-gray-400 fw-bold fs-5">If you need more info about our pricing, please check
+                                    <a href="#" class="link-primary fw-bolder">Pricing Guidelines</a>.</div>
                             </div>
-                            <div class="widget-content widget-content-area">
+                            <!--end::Heading-->
+                            <!--begin::Nav group-->
+                            <div class="nav-group nav-group-outline mx-auto mb-15" data-kt-buttons="true">
+                                <button class="btn btn-color-gray-400 btn-active btn-active-secondary px-6 py-3 me-2 active" data-kt-plan="month">Monthly</button>
+                                <button class="btn btn-color-gray-400 btn-active btn-active-secondary px-6 py-3" data-kt-plan="annual">Annual</button>
+                            </div>
+                            <div class="row g-10">
+                                {% for plan in plans %}
+                                <div class="col-xl-3">
+                                    <div class="d-flex h-100 align-items-center">
+                                        <!--begin::Option-->
+                                        <div class="w-100 d-flex flex-column flex-center rounded-3 bg-light bg-opacity-75 py-15 px-10">
+                                            <!--begin::Heading-->
+                                            <div class="mb-7 text-center">
+                                                <!--begin::Title-->
+                                                <h1 class="text-dark mb-5 fw-boldest">{{ plan.name }}<span> {% if plan.percentage == "0" or plan.percentage == "" %}
 
-                                <div class="pricing-table-2 ">
-
-                                    <!-- Billing Cycle  -->
-                                    <div class="billing-cycle-radios mt-5">
-
-                                        <div class="switch form-switch-custom switch-inline form-switch-primary form-switch-custom inner-label-toggle show">
-                                            <div class="input-checkbox">
-                                                <span class="switch-chk-label label-left">Monthly</span>
-                                                <input class="switch-input" type="checkbox" role="switch" id="toggle-pricing" checked
-                                                       onchange="this.checked ? this.closest('.inner-label-toggle').classList.add('show') : this.closest('.inner-label-toggle').classList.remove('show'); togglePricing(this.checked);">
-                                                <span class="switch-chk-label label-right">Yearly</span>
-                                            </div>
-                                        </div>
-
-                                    </div>
-
-                                    <!-- Pricing Plans Container -->
-                                    <div class="pricing-plans-container mt-5">
-                                        <!-- Plan -->
-                                        {% for plan in plans %}
-                                            <div class="pricing-plan mb-5" style="    margin-left: 5px;">
-                                                {% if plan.percentage == "0" or plan.percentage == "" %}
-
-                                                {% else %}
-                                                <span class="badge badge-pill badge-secondary show text-white"> {{ plan.percentage }} %  Off</span>
-                                                {% endif %}
-
-                                                <div class="pricing-header-section">
-                                                    <div class="pricing-header">
-                                                        <h3>{{ plan.name }}</h3>
-                                                        {% set tags = plan.tags|split(',') %}
-<p>
-                                                        {% for tag in tags %}
-                                                            {% if tag == "" %}
                                                         {% else %}
-                                                      <span class="badge-secondary" style="font-weight: 600;
-    line-height: 1.4;
-    font-size: 11.9px;
-    font-weight: 600;
-    transition: all 0.3s ease-out;
-    -webkit-transition: all 0.3s ease-out;
-    display: inline-block;
-    padding: 4.6px 8px;
-    color: #FFF;
-    border-radius: 6px ;
-    margin-right: 5px;
-}">
-                                                        {{ tag }}
-</span>{% endif %}
-                                                        {% endfor %}
-
-</p>
-                                                    </div>
-
-                                                    <div class="pricing-header-pricing">
-                                                        <!-- Monthly Price -->
-                                                        <p class="pricing monthly-pricing {% if not loop.first %}hidden{% endif %}">$ {{ plan.monthly_price }}</p>
-                                                        <!-- Yearly Price -->
-                                                        <p class="pricing yearly-pricing {% if loop.first %}hidden{% endif %}">$ {{ plan.yearly_price }}</p>
-                                                        <p class="sub-title monthly-pricing-label {% if not loop.first %}hidden{% endif %}">Per month</p>
-                                                        <p class="sub-title yearly-pricing-label {% if loop.first %}hidden{% endif %}">Per year</p>
-                                                    </div>
+                                                            <div class="badge badge-pill badge-secondary show text-white"> {{ plan.percentage }} %  Off</div>
+                                                        {% endif %}</span></h1>
+                                                <!--end::Title-->
+                                                <!--begin::Description-->
+                                                <div class="text-gray-400 fw-bold mb-5">  </div>
+                                                <!--end::Description-->
+                                                <!--begin::Price-->
+                                                <div class="text-center">
+                                                    <span class="mb-2 text-primary">$</span>
+                                                    <span class="fs-3x fw-bolder text-primary" data-kt-plan-price-month="{{ plan.monthly_price }}" data-kt-plan-price-annual="{{ plan.yearly_price }}">$ {{ plan.monthly_price }}</span>
+                                                    <span class="fs-7 fw-bold opacity-50">/
+																	<span data-kt-element="period">Mon</span></span>
                                                 </div>
-
-                                                <div class="pricing-plan-features mb-4">
-                                                    <ul>
-                                                        {% set key_points = plan.key_points|split(',') %}
-                                                        {% for key_point in key_points %}
-                                                            <li>
-                        <span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
-                                <polyline points="20 6 9 17 4 12"></polyline>
-                            </svg>
-                        </span>
-                                                                {{ key_point }}
-                                                            </li>
-                                                        {% endfor %}
-                                                    </ul>
-                                                </div>
-                                                <a href="javascript:void(0);" class="button btn btn-primary btn-block margin-top-20 w-100">Get Started</a>
+                                                <!--end::Price-->
                                             </div>
-                                        {% endfor %}
-
+                                            <!--end::Heading-->
+                                            <!--begin::Features-->
+                                            <div class="w-100 mb-10">
+                                                <!--begin::Item-->
+                                                {% set key_points = plan.key_points|split(',') %}
+                                                {% for key_point in key_points %}
+                                                <div class="d-flex align-items-center mb-5">
+                                                    <span class="fw-bold fs-6 text-gray-800 flex-grow-1 pe-3"> {{ key_point }}</span>
+                                                    <!--begin::Svg Icon | path: icons/duotune/general/gen043.svg-->
+                                                    <span class="svg-icon svg-icon-1 svg-icon-success">
+																		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+																			<rect opacity="0.3" x="2" y="2" width="20" height="20" rx="10" fill="currentColor" />
+																			<path d="M10.4343 12.4343L8.75 10.75C8.33579 10.3358 7.66421 10.3358 7.25 10.75C6.83579 11.1642 6.83579 11.8358 7.25 12.25L10.2929 15.2929C10.6834 15.6834 11.3166 15.6834 11.7071 15.2929L17.25 9.75C17.6642 9.33579 17.6642 8.66421 17.25 8.25C16.8358 7.83579 16.1642 7.83579 15.75 8.25L11.5657 12.4343C11.2533 12.7467 10.7467 12.7467 10.4343 12.4343Z" fill="currentColor" />
+																		</svg>
+																	</span>
+                                                    <!--end::Svg Icon-->
+                                                </div>
+                                                {% endfor %}
+                                            </div>
+                                            <!--end::Features-->
+                                            <!--begin::Select-->
+                                            <a href="#" class="btn btn-sm btn-primary">Select</a>
+                                            <!--end::Select-->
+                                        </div>
+                                        <!--end::Option-->
                                     </div>
-
-
-
                                 </div>
-
+                                {% endfor %}
                             </div>
+                            <!--end::Row-->
                         </div>
+                        <!--end::Plans-->
                     </div>
-
-
-
+                    <!--end::Card body-->
                 </div>
-
+                <!--end::Pricing card-->
             </div>
-
+            <!--end::Container-->
         </div>
-
-        <!--  BEGIN FOOTER  -->
-        <div class="footer-wrapper">
-            <div class="footer-wrapper">
-                <div class="footer-section f-section-1">
-                    <p class="">Copyright © <span class="dynamic-year">2024</span> <a target="_blank" href="https://zotecsoft.com/">ZotecSoft</a>, All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-        <!--  END FOOTER  -->
-
+        <!--end::Post-->
     </div>
-    <!--  END CONTENT AREA  -->
-    <script>
-        const isChecked = document.getElementById('toggle-1').checked;
-        const monthlyPricing = document.querySelector('.monthly-pricing');
-        const yearlyPricing = document.querySelector('.yearly-pricing');
-        const monthlyPricingLabel = document.querySelector('.monthly-pricing-label');
-        const yearlyPricingLabel = document.querySelector('.yearly-pricing-label');
 
-        if (isChecked) {
-            monthlyPricing.style.display = 'block';
-            monthlyPricingLabel.style.display = 'block';
-            yearlyPricing.style.display = 'none';
-            yearlyPricingLabel.style.display = 'none';
-        } else {
-            monthlyPricing.style.display = 'none';
-            monthlyPricingLabel.style.display = 'none';
-            yearlyPricing.style.display = 'block';
-            yearlyPricingLabel.style.display = 'block';
-        }
-        function togglePricing(isMonthly) {
-            const monthlyElements = document.querySelectorAll('.monthly-pricing, .monthly-pricing-label');
-            const yearlyElements = document.querySelectorAll('.yearly-pricing, .yearly-pricing-label');
-
-            if (isMonthly) {
-                yearlyElements.forEach(element => {
-                    element.classList.remove('hidden');
-                });
-                monthlyElements.forEach(element => {
-                    element.classList.add('hidden');
-                });
-            } else {
-                yearlyElements.forEach(element => {
-                    element.classList.add('hidden');
-                });
-                monthlyElements.forEach(element => {
-                    element.classList.remove('hidden');
-                });
-            }
-        }
-    </script>
 
 {% endblock %}
